--- a/src/index.css
+++ b/src/index.css
@@ -268,6 +268,10 @@ transition-all z-30;
   @apply text-xs;
 }
 
+.input-wrap:has(.error-show) label {
+  @apply text-alert;
+}
+
 .input-wrap:has(.error-show) input, 
 .input-wrap:has(.error-show) textarea,
 .input-wrap:has(.error-show) select{
